<resources>
    <string name="app_name">Quark\'s Online</string>
    <string name="admin_editItem_items">Items</string>
    <string name="admin_editItem_createItem">Create Item</string>
    <string name="adminTools_createUser">Create User</string>
    <string name="adminEditUsers_users">Users</string>
    <string name="adminTools_editItems">Edit Items</string>
    <string name="adminTools_editUsers">Edit Users</string>
    <string name="adminTools_title">Admin Tools</string>
    <string name="create_createNewAccount">Create New Account</string>
    <string name="create_username">Username</string>
    <string name="create_reenterPassword">Re-enter Password</string>
    <string name="create_createAccountButton">Create Account</string>
    <string name="create_password">Password</string>
    <string name="landingPage_userHere">User here</string>
    <string name="landingPage_shop">Shop</string>
    <string name="landingPage_viewOrders">View Orders</string>
    <string name="landingPage_adminControls">Admin Controls</string>
    <string name="landingPage_rules">Rule of Acquisition</string>
    <string name="landingPage_logout">Log Out</string>
    <string name="landingPage_welcome">Welcome to Quark\'s</string>
    <string name="login_welcomeBack">Welcome Back</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Login</string>
    <string name="login_forgotPass">Forgot Password?</string>
    <string name="main_title">Quark\'s Online</string>
    <string name="main_signIn">Sign In</string>
    <string name="main_createAccount">Create Account</string>
    <string name="main_quote">Good customers are as rare as latinum - treasure them.</string>
    <string name="shop_title">Shop</string>
    <string name="userAccount_username">Username:</string>
    <string name="userAccount_pass">password</string>
    <string name="userAccount_user">username</string>
    <string name="userAccount_passField">Password:</string>
    <string name="userAccount_deleteAccount">Delete Account</string>
    <string name="userAccount_title">Your Account Info</string>
    <string name="orderPage_title">Your Orders</string>
    <string name="orderPage_noOrders">You don\'t have any orders!</string>
    <string name="admin_dialogUsername">Username</string>
    <string name="admin_dialogPass">Password</string>
    <string name="admin_dialogAdminAccess">Admin Access</string>
    <string name="modifyItem_itemName">Item Name</string>
    <string name="modifyItem_itemDescription">Description</string>
    <string name="modifyItem_inventory">Inventory:</string>
    <string name="modifyItem_price">Price</string>
    <string name="modifyUser_username">Username</string>
    <string name="modifyUser_pass">Password</string>
    <string name="modifyUser_access">Admin Access</string>
    <string name="adminUserView_username">Username</string>
    <string name="adminUserView_remove">Remove</string>
    <string name="adminUserView_modify">Modify</string>
    <string name="adminUserView_userId">User ID</string>
    <string name="adminEditItem_itemName">TextView</string>
    <string name="adminEditItem_itemDescription">TextView</string>
    <string name="adminEditItem_qty">TextView</string>
    <string name="adminEditItem_id">TextView</string>
    <string name="adminEditItem_deleteButton">Delete</string>
    <string name="adminEditItem_modifyButton">Modify</string>
    <string name="adminEditItem_price">TextView</string>
    <string name="viewOrder_order">TextView</string>
    <string name="shop_itemName">TextView</string>
    <string name="shop_ItemDescription">TextView</string>
    <string name="shop_itemQty">TextView</string>
    <string name="shop_itemId">TextView</string>
    <string name="shop_itemPrice">TextView</string>
</resources>