<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/modifyUser_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/modifyUser_username" />

    <EditText
        android:id="@+id/modifyUser_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modifyUser_username"
        android:hint="@string/modifyUser_pass" />

    <CheckBox
        android:id="@+id/modifyUser_isAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/modifyUser_password"
        android:text="@string/modifyUser_access" />

</RelativeLayout>