<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:visibility="visible"
    tools:context=".LandingPage">


    <TextView
        android:id="@+id/landing_page_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="16dp"
        android:text="@string/landingPage_userHere"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/landing_page_logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/landing_page_shop_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="288dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/landingPage_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/landing_page_vieworders_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/landingPage_viewOrders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_page_shop_button" />

    <Button
        android:id="@+id/landing_page_admin_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/landingPage_adminControls"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingPage_randomRules_button" />

    <Button
        android:id="@+id/landingPage_randomRules_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:text="@string/landingPage_rules"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_page_vieworders_button" />


    <Button
        android:id="@+id/landing_page_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/landingPage_logout"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/landing_page_latinum_image"
        android:layout_width="205dp"
        android:layout_height="181dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/latinum"
        app:layout_constraintBottom_toTopOf="@+id/landing_page_shop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_page_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/landing_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/landingPage_welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>