<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quark_login"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quark_login_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="364dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/main_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quark_login_title" />

    <Button
        android:id="@+id/create_account_in_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/main_createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/latinum_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_quote"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>