<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:context=".UserAccountActivity">


    <TextView
        android:id="@+id/userAccount_usernameLabel_textView"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="@string/userAccount_username"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userAccount_passwordField_textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/userAccount_pass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userAccount_passwordLabel_textView"
        app:layout_constraintTop_toBottomOf="@+id/userAccount_usernameField_textView" />

    <TextView
        android:id="@+id/userAccount_usernameField_textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:hint="@string/userAccount_user"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userAccount_usernameLabel_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userAccount_passwordLabel_textView"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/userAccount_passField"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAccount_usernameLabel_textView" />


    <Button
        android:id="@+id/userAccount_deleteAccount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/userAccount_deleteAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userAccount_backButton"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/userAccount_title"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/userAccount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/userAccount_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>