<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/quark_login_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="@string/login_welcomeBack"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/login_signIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quark_login_title" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/login_username"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/login_password"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/login_loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/login_forgotPass"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/login_backButoon"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>