<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/admin_editItem_cardImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ferengi_logo_gold" />

            <TextView
                android:id="@+id/admin_editItem_cardItemName"
                android:layout_width="211dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/adminEditItem_itemName"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/admin_editItem_cardImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/admin_editItem_cardItemDescription"
                android:layout_width="211dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/adminEditItem_itemDescription"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/admin_editItem_cardImage"
                app:layout_constraintTop_toBottomOf="@+id/admin_editItem_cardItemName"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/admin_editItem_cardItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/adminEditItem_qty"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/admin_editItem_cardItemId"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/admin_editItem_cardItemId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/adminEditItem_id"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/admin_editItem_cardDeleteItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/adminEditItem_deleteButton"
                app:layout_constraintLeft_toRightOf="@+id/admin_editItem_cardImage"
                app:layout_constraintEnd_toStartOf="@+id/admin_editItem_cardModifyItemButton"


                app:layout_constraintTop_toBottomOf="@+id/admin_editItem_cardItemDescription" />

            <Button
                android:id="@+id/admin_editItem_cardModifyItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="84dp"
                android:text="@string/adminEditItem_modifyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/admin_editItem_cardItemDescription" />

            <TextView
                android:id="@+id/admin_editItem_cardItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/adminEditItem_price"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/admin_editItem_cardItemName"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>