<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_logo"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/create_account_textview"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="@string/create_createNewAccount"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_username_edittext"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/create_username"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_textview" />

    <EditText
        android:id="@+id/create_reenter_password_edittext"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/create_reenterPassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_password_edittext" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/create_createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_reenter_password_edittext" />

    <EditText
        android:id="@+id/create_password_edittext"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_username_edittext" />

    <ImageView
        android:id="@+id/create_backButton"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>